# nes-emulator

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  changelog.rst
examples/: color_animation.rs  cpu_run_forever.rs  render_palettes.rs  render_pattern_tables.rs
src/: cartidge.rs  controller.rs  dma.rs  errors.rs  events.rs  hardware.rs  lib.rs  main.rs  mappers.rs  metrics.rs  nes.rs  settings.rs  types.rs  utils.rs
src/graphics/: mod.rs  oam.rs  palette.rs  palette_memory.rs  palettes.rs  pattern_table.rs  pixel_producer.rs  ppu.rs  ppu_registers.rs  render_address.rs
src/graphics/ui/: gtk_ui.rs  mod.rs
src/interfaces/: mod.rs
src/mappers/: mapper_000.rs  mod.rs
src/processor/: bus.rs  cpu.rs  instruction.rs  instruction_set.rs  internal_cpu.rs  memory.rs  mod.rs  status_register.rs  tests.rs  utils.rs
src/processor/cpu/: tests.rs
src/traits/: mod.rs
src/ui/: gtk_ui.rs  mod.rs
tests/: bitflags.rs
