[package]
name = "nes-emulator"
version = "0.61.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "^0.4" }
env_logger = { version = "^0.10" }
gtk = { version = "0.6.2", package = "gtk4", features = ["v4_6"] }
once_cell = "1.17.1"
bitflags = "1.3.2"
crossbeam-channel = "0.5.7"
thiserror = "1.0.63"
anyhow = { version = "1.0.88", features = ["backtrace"] }

[dev-dependencies]
mockall = "0.11.2"
